# raachat

./: LICENSE  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  run_astro_prime.bat
raajeeb_astro_prime/: __init__.py  cli.py  main.py
raajeeb_astro_prime/astro_engine/: compatibility.py  dasha.py  ephemeris_backend.py  remedies.py  transit.py  vedic_calculations.py  yogas.py
raajeeb_astro_prime/config/: __init__.py  persona_system_prompt.txt  settings.py
raajeeb_astro_prime/data/: ephemeris.csv  lal_kitab_remedies.csv  lalkitab_remedies_matrix.csv  remedies_gemstones.csv  vedic_yogas.csv
raajeeb_astro_prime/llm/: __init__.py  gpt4all_client.py  renderer.py
raajeeb_astro_prime/models/: __init__.py  astro_core.py  compatibility.py
raajeeb_astro_prime/schemas/: Chart.schema.json  CompatibilityResult.schema.json  DashaPeriod.schema.json  TransitSnapshot.schema.json
raajeeb_astro_prime/storage/: profiles.py
raajeeb_astro_prime/tests/: test_compatibility.py  test_dasha.py
